// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common - utils - bannerHelper getBannerConfiguration => Deberia traer la configuracion del adhesion_mob con y sin suscripcion 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ln-banner-container --no-app --adhesion_mob --fixed --close none "
      >
        <div
          class="ln-banner"
          data-ad-unit-path="/133919216/la_nacion_mobile/Nota/adhesion_mob"
          data-device="mobile"
          data-prebid-enabled="false"
          data-size="[[320,50]]"
          data-sizemap="[]"
          data-slot-group="nota"
          data-subscription="false"
          data-targeting="{"sitio":"lanacion","seccion":"nota"}"
          data-without-hide="false"
          id="adhesion_mob"
        />
        <button
          aria-label="Close"
          class="cursor-pointer transition-regular flex opacity-80_hover button ln-button"
          id="adhesion_mob_btnCloseAd"
          type="button"
        >
          <i
            class="icon icon-close --icon-24 --light"
          >
            <svg
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 10.586L16.243 6.34299C16.6335 5.95252 17.2665 5.95252 17.657 6.34299C18.0475 6.73345 18.0475 7.36652 17.657 7.75699L13.414 12L17.657 16.243C18.0475 16.6335 18.0475 17.2665 17.657 17.657C17.2665 18.0475 16.6335 18.0475 16.243 17.657L12 13.414L7.75699 17.657C7.36652 18.0475 6.73345 18.0475 6.34299 17.657C5.95252 17.2665 5.95252 16.6335 6.34299 16.243L10.586 12L6.34299 7.75699C5.95252 7.36652 5.95252 6.73345 6.34299 6.34299C6.73345 5.95252 7.36652 5.95252 7.75699 6.34299L12 10.586Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ln-banner-container --no-app --adhesion_mob --fixed --close none "
    >
      <div
        class="ln-banner"
        data-ad-unit-path="/133919216/la_nacion_mobile/Nota/adhesion_mob"
        data-device="mobile"
        data-prebid-enabled="false"
        data-size="[[320,50]]"
        data-sizemap="[]"
        data-slot-group="nota"
        data-subscription="false"
        data-targeting="{"sitio":"lanacion","seccion":"nota"}"
        data-without-hide="false"
        id="adhesion_mob"
      />
      <button
        aria-label="Close"
        class="cursor-pointer transition-regular flex opacity-80_hover button ln-button"
        id="adhesion_mob_btnCloseAd"
        type="button"
      >
        <i
          class="icon icon-close --icon-24 --light"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12 10.586L16.243 6.34299C16.6335 5.95252 17.2665 5.95252 17.657 6.34299C18.0475 6.73345 18.0475 7.36652 17.657 7.75699L13.414 12L17.657 16.243C18.0475 16.6335 18.0475 17.2665 17.657 17.657C17.2665 18.0475 16.6335 18.0475 16.243 17.657L12 13.414L7.75699 17.657C7.36652 18.0475 6.73345 18.0475 6.34299 17.657C5.95252 17.2665 5.95252 16.6335 6.34299 16.243L10.586 12L6.34299 7.75699C5.95252 7.36652 5.95252 6.73345 6.34299 6.34299C6.73345 5.95252 7.36652 5.95252 7.75699 6.34299L12 10.586Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`common - utils - bannerHelper getBannerConfiguration => Deberia traer la configuracion del banner cabezal 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ln-banner-container --no-app --cabezal_dsk --sticky "
      >
        <div
          class="ln-banner"
          data-ad-unit-path="/133919216/la_nacion_desktop/Nota/cabezal_dsk"
          data-device="desktop"
          data-prebid-enabled="true"
          data-size="[[1,1],[728,90],[920,100],[920,170],[970,90],[1260,100],[1260,170]]"
          data-sizemap="[]"
          data-slot-group="nota"
          data-subscription="false"
          data-targeting="{"sitio":"lanacion","seccion":"nota"}"
          data-without-hide="true"
          id="cabezal_dsk"
        />
      </div>
      <script
        data-banner-classes=".--cabezal_dsk"
        data-viewport=".lay-sidebar"
        defer=""
        id="getStickyBanner"
        type="text/javascript"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="ln-banner-container --no-app --cabezal_dsk --sticky "
    >
      <div
        class="ln-banner"
        data-ad-unit-path="/133919216/la_nacion_desktop/Nota/cabezal_dsk"
        data-device="desktop"
        data-prebid-enabled="true"
        data-size="[[1,1],[728,90],[920,100],[920,170],[970,90],[1260,100],[1260,170]]"
        data-sizemap="[]"
        data-slot-group="nota"
        data-subscription="false"
        data-targeting="{"sitio":"lanacion","seccion":"nota"}"
        data-without-hide="true"
        id="cabezal_dsk"
      />
    </div>
    <script
      data-banner-classes=".--cabezal_dsk"
      data-viewport=".lay-sidebar"
      defer=""
      id="getStickyBanner"
      type="text/javascript"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
